objects/DWC_Attachment__c.object
<CustomObject>
    <fields>
        <fullName>Attach_To__c</fullName>
        <label>Attach To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Content_Type__c</fullName>
        <label>Content Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <label>CreatedDate</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_By__c</fullName>
        <label>Created By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>File_ID__c</fullName>
        <externalId>true</externalId>
        <label>File ID</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>File_Name__c</fullName>
        <label>File Name</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>File_Size__c</fullName>
        <label>File Size</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Modified_By__c</fullName>
        <label>Modified By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Modified_Date__c</fullName>
        <label>Modified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PTSR_ID__c</fullName>
        <externalId>true</externalId>
        <label>PTSR ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PTSR_Number__c</fullName>
        <label>PTSR Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference__c</fullName>
        <label>Reference</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Waiver_Collaborator__c</fullName>
        <label>Waiver Collaborator</label>
        <referenceTo>Wavier_Collaborator__c</referenceTo>
        <relationshipLabel>DWC Attachments</relationshipLabel>
        <relationshipName>DWC_Attachments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>DWC Attachment</label>
    <nameField>
        <label>DWC Attachment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DWC Attachments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>